fix : avatar css in index , z-index of article category tree menu in article edit page

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -53,7 +53,6 @@
 }
 
 .username {
-  margin-left:-15px;
   margin-bottom: 0;
   font-size: 18px;
   font-weight: 400;
